<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_item_home" />
        <item
            android:id="@+id/navigation_item_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/navigation_item_cart" />
        <item
            android:id="@+id/navigation_item_orders"
            android:icon="@drawable/ic_box"
            android:title="@string/navigation_item_orders" />
    </group>
</menu>