...
            android:layout_marginTop="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_90"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toEndOf="@+id/img_product"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Cabify T-Shirt" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
...
            android:layout_marginBottom="@dimen/spacing_mxlarge"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_item_add"
            tools:text="1" />

        <ImageButton
            android:id="@+id/btn_item_add"
            android:layout_width="32dp"
            android:layout_height="20dp"
...
