...
                    layout="@layout/empty_cart"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
...

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cart_pay"
            style="@style/PrimaryButtonWithDisabledState"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="@dimen/spacing_medium"
            android:enabled="false"
            android:text="@string/pay" />
...
